--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 # This file was auto-generated, do not edit it directly.
 # Instead run bin/update_build_scripts from
-# https://github.com/sharelatex/sharelatex-dev-environment
-# Version: 1.1.12
+# https://github.com/das7pad/sharelatex-dev-env
+# Version: 1.1.17
 
-version: "2"
+version: "3.1"
 
 services:
   test_unit:
-    build: .
+    image: node:6.11.2
     volumes:
       - .:/app
     working_dir: /app
