--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "s3-streams": "^0.3.0",
     "settings-sharelatex": "^1.1.0",
     "underscore": "~1.7.0",
-    "v8-profiler": "^5.6.5"
+    "v8-profiler-node8": "^6.0.1"
   },
   "devDependencies": {
     "bunyan": "~2.0.2",
