--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,7 +1,7 @@
 # This file was auto-generated, do not edit it directly.
 # Instead run bin/update_build_scripts from
 # https://github.com/das7pad/sharelatex-dev-env
-# Version: 2.4.1
+# Version: 3.0.0
 
 version: "3.1"
 
@@ -16,17 +16,17 @@ services:
     build: .
     image: ci/$PROJECT_NAME:$BRANCH_NAME-$BUILD_NUMBER
     environment:
-      ELASTIC_SEARCH_DSN: es:9200
-      REDIS_HOST: redis
       MONGO_HOST: mongo
-      POSTGRES_HOST: postgres
+      HISTORY_REDIS_HOST: redis_history
+      LOCK_REDIS_HOST: redis_lock
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       AWS_BUCKET: ${AWS_BUCKET}
       MOCHA_GREP: ${MOCHA_GREP}
     depends_on:
       - mongo
-      - redis
+      - redis_history
+      - redis_lock
     user: node
     command: npm run test:acceptance:_run
 
@@ -40,7 +40,9 @@ services:
     command: tar -czf /tmp/build/build.tar.gz --exclude=build.tar.gz --exclude-vcs .
     user: root
 
-  redis:
+  redis_history:
+    image: redis
+  redis_lock:
     image: redis
 
   mongo:
