[misc] keep up with the express module changes
express.bodyParser it is an own package now

Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "JSONStream": "^1.0.4",
     "async": "~0.2.10",
     "aws-sdk": "^2.102.0",
+    "body-parser": "^1.19.0",
     "bson": "^0.4.20",
     "byline": "^4.2.1",
     "cli": "^1.0.1",
