[misc] bump metrics-sharealtex to our dev version
- use a noop metrics backend by default
- drop vendor specific packages
- drop unused packages

Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "heap": "^0.2.6",
     "line-reader": "^0.2.4",
     "logger-sharelatex": "git+https://github.com/das7pad/logger-sharelatex.git#0a27a2785df04b627bb3557f01ac6e7573a97c61",
-    "metrics-sharelatex": "^2.2.0",
+    "metrics-sharelatex": "git+https://github.com/das7pad/metrics-sharelatex.git#866a23f83fcc3e812a70b4b4a88d445323e66988",
     "mongo-uri": "^0.1.2",
     "mongojs": "2.4.0",
     "redis-sharelatex": "git+https://github.com/das7pad/redis-sharelatex.git#ac6c785d2391fe84e58f220b1fb609e62fac9ef4",
