--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -27,7 +27,7 @@ services:
     environment:
       LOG_LEVEL: fatal
       MONGO_HOST: mongo
-      HISTORY_REDIS_HOST: redis_history
+      DOC_UPDATER_REDIS_HOST: redis_documentupdater
       LOCK_REDIS_HOST: redis_lock
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
@@ -35,7 +35,7 @@ services:
       MOCHA_GREP: ${MOCHA_GREP}
     depends_on:
       - mongo
-      - redis_history
+      - redis_documentupdater
       - redis_lock
     user: node
     entrypoint:
@@ -60,7 +60,7 @@ services:
     command: tar -czf /tmp/build/build.tar.gz --exclude=build.tar.gz --exclude-vcs .
     user: root
 
-  redis_history:
+  redis_documentupdater:
     image: redis
   redis_lock:
     image: redis
