[misc] bump the dev env to 9.1.0
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -55,3 +55,9 @@
 !/test/unit/coffee
 # app #
 #######
+
+###################
+# build artifacts #
+!/build_artifacts.tar.gz
+# build artifacts #
+###################
