--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -55,22 +55,6 @@ services:
     volumes:
       - ./output:/home/node:z
 
-  tar:
-    build: .
-    image: ci/$PROJECT_NAME:$BRANCH_NAME-$BUILD_NUMBER
-    volumes:
-      - ./:/tmp/build/
-    command: tar -czf /tmp/build/build.tar.gz --exclude=build.tar.gz --exclude-vcs .
-    user: root
-
-  redis_documentupdater:
-    image: redis
-  redis_lock:
-    image: redis
-
-  mongo:
-    image: mongo:3.4
-
   minio:
     image: minio/minio
     command: server /data
@@ -91,3 +75,12 @@ services:
         && mc admin trace minio
     depends_on:
       - minio
+
+  mongo:
+    image: mongo
+
+  redis_documentupdater:
+    image: redis
+
+  redis_lock:
+    image: redis
