--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,26 +39,11 @@ services:
       - redis_lock
     command: npm run test:acceptance
 
-  tar:
-    build: .
-    image: ci/$PROJECT_NAME:$BRANCH_NAME-$BUILD_NUMBER
-    volumes:
-      - ./:/tmp/build/
-    command: tar -czf /tmp/build/build.tar.gz --exclude=build.tar.gz --exclude-vcs .
-    user: root
-
-  redis_documentupdater:
-    image: redis
-  redis_lock:
-    image: redis
-
-  mongo:
-    image: mongo:3.4
-
   minio:
     image: minio/minio
     command: server /data
     environment:
+      MINIO_BROWSER: 'off'
       MINIO_ACCESS_KEY: ${AWS_KEY}
       MINIO_SECRET_KEY: ${AWS_SECRET}
 
@@ -74,3 +59,12 @@ services:
         && mc admin trace minio
     depends_on:
       - minio
+
+  mongo:
+    image: mongo
+
+  redis_documentupdater:
+    image: redis
+
+  redis_lock:
+    image: redis
