[misc] bump the dev env to 9.8.0
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     user: node
 
   test_acceptance:
-    build: .
+    image: node:12.14.0
     volumes:
       - .:/app
     working_dir: /app
