[misc] bump the dev env to 9.8.1
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -37,6 +37,7 @@ services:
       MOCHA_GREP: ${MOCHA_GREP}
     depends_on:
       - minio
+      - minio_setup
       - mongo
       - redis_documentupdater
       - redis_lock
