--- a/.dockerignore
+++ b/.dockerignore
@@ -36,7 +36,7 @@
 
 ##############
 # app config #
-!/config/settings.defaults.coffee
+!/config/settings.defaults.*
 # app config #
 ##############
 
