[misc] bump dev env to 13.3.1
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -6,7 +6,7 @@ version: "3.1"
 
 services:
   test_unit:
-    image: ci/$PROJECT_NAME:$BRANCH_NAME-$BUILD_NUMBER
+    image: ${IMAGE_CI}-dev
     user: node
     command:
       - npx
@@ -22,8 +22,7 @@ services:
       - ./output:/home/node:z
 
   test_acceptance:
-    build: .
-    image: ci/$PROJECT_NAME:$BRANCH_NAME-$BUILD_NUMBER
+    image: ${IMAGE_CI}-dev
     environment:
       LOG_LEVEL: fatal
       MONGO_HOST: mongo
