--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -58,6 +58,7 @@ services:
   minio:
     image: minio/minio
     command: server /data
+    tmpfs: /data
     environment:
       MINIO_BROWSER: 'off'
       MINIO_ACCESS_KEY: ${AWS_ACCESS_KEY_ID}
@@ -77,9 +78,12 @@ services:
 
   mongo:
     image: mongo
+    tmpfs: /data
 
   redis_documentupdater:
     image: redis
+    tmpfs: /data
 
   redis_lock:
     image: redis
+    tmpfs: /data
