[misc] bump logger-sharelatex and settings-sharelatex
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "bson": "^0.4.20",
     "express": "^4.17.1",
     "heap": "^0.2.6",
-    "logger-sharelatex": "git+https://github.com/das7pad/logger-sharelatex.git#273abe254b90cad45ab9b04436e50eedb3981053",
+    "logger-sharelatex": "git+https://github.com/das7pad/logger-sharelatex.git#bef2078daae2433a43e61db306e301398199daa0",
     "metrics-sharelatex": "git+https://github.com/das7pad/metrics-sharelatex.git#3aa1de4fba521fc0e7969e619dec8f169f0d889f",
     "mongojs": "2.4.0",
     "redis-sharelatex": "git+https://github.com/das7pad/redis-sharelatex.git#70ee5b4fb50d36f793b44715072872bbb29717bd",
     "request": "^2.88.0",
     "requestretry": "^3.1.0",
-    "settings-sharelatex": "^1.1.0",
+    "settings-sharelatex": "git+https://github.com/das7pad/settings-sharelatex.git#d0797834438df2d102798a64602adf2f71ac8e48",
     "underscore": "~1.7.0"
   },
   "devDependencies": {
