[misc] bump the dev env to 15.0.0
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -30,7 +30,7 @@ services:
       DOC_UPDATER_REDIS_HOST: redis_documentupdater
       LOCK_REDIS_HOST: redis_lock
       AWS_S3_ENDPOINT: ${AWS_S3_ENDPOINT}
-      AWS_S3_FORCE_PATH_STYLE: ${AWS_S3_FORCE_PATH_STYLE}
+      AWS_S3_PATH_STYLE: ${AWS_S3_PATH_STYLE}
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       AWS_BUCKET: ${AWS_BUCKET}
