[misc] bump logger, metrics, redis and settings package

--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "compile:smoke_tests": "[ ! -e test/smoke/coffee ] &&  echo 'No smoke tests to compile' || coffee -o test/smoke/js -c test/smoke/coffee"
   },
   "dependencies": {
+    "@overleaf/metrics": "https://github.com/das7pad/metrics-sharelatex/archive/314238a72d2d91d3b912f4deab4a8be97a99552f.tar.gz",
     "async": "~0.2.10",
     "aws-sdk": "^2.102.0",
     "body-parser": "^1.19.0",
     "bson": "^0.4.20",
     "express": "^4.17.1",
     "heap": "^0.2.6",
-    "logger-sharelatex": "git+https://github.com/das7pad/logger-sharelatex.git#bef2078daae2433a43e61db306e301398199daa0",
-    "metrics-sharelatex": "git+https://github.com/das7pad/metrics-sharelatex.git#471b0a35d8125818393738cb95702367add6d203",
+    "logger-sharelatex": "https://github.com/das7pad/logger-sharelatex/archive/16a8d66c59318ca4b3c236136fd9603ee2edb4f0.tar.gz",
     "mongojs": "2.4.0",
-    "redis-sharelatex": "git+https://github.com/das7pad/redis-sharelatex.git#70ee5b4fb50d36f793b44715072872bbb29717bd",
+    "redis-sharelatex": "https://github.com/das7pad/redis-sharelatex/archive/2d77ad921db0effe7e522cfb311ae8c8ae22f359.tar.gz",
     "request": "^2.88.0",
     "requestretry": "^3.1.0",
-    "settings-sharelatex": "git+https://github.com/das7pad/settings-sharelatex.git#d0797834438df2d102798a64602adf2f71ac8e48",
+    "settings-sharelatex": "https://github.com/das7pad/settings-sharelatex/archive/d0797834438df2d102798a64602adf2f71ac8e48.tar.gz",
     "underscore": "~1.7.0"
   },
   "devDependencies": {
